Untuned SMC implemented

--- a/turtlebot_control/CMakeLists.txt
+++ b/turtlebot_control/CMakeLists.txt
@@ -18,11 +18,13 @@ find_package(ament_cmake REQUIRED)
 find_package(rclcpp REQUIRED)
 find_package(geometry_msgs REQUIRED)
 find_package(turtlebot_msgs REQUIRED)
+find_package(nav_msgs REQUIRED)
 
 set(dependencies
     rclcpp
     geometry_msgs
     turtlebot_msgs
+    nav_msgs
 )
 
 include_directories(include)
