--- a/turtlebot_control/CMakeLists.txt
+++ b/turtlebot_control/CMakeLists.txt
@@ -17,13 +17,11 @@ endif()
 find_package(ament_cmake REQUIRED)
 find_package(rclcpp REQUIRED)
 find_package(geometry_msgs REQUIRED)
-find_package(turtlebot_msgs REQUIRED)
 find_package(nav_msgs REQUIRED)
 
 set(dependencies
     rclcpp
     geometry_msgs
-    turtlebot_msgs
     nav_msgs
 )
 
@@ -60,6 +58,10 @@ install(TARGETS control
 
 install(DIRECTORY include/
     DESTINATION include
+)
+
+install(DIRECTORY config/
+    DESTINATION share/${PROJECT_NAME}
 )
 
 if(BUILD_TESTING)
