--- a/turtlebot_control/config/config.yaml
+++ b/turtlebot_control/config/config.yaml
@@ -1,11 +1,11 @@
-inputServiceName: "srv_vel"
+Controller:
+    ros__parameters:
+        k1: 5.0
+        k2: 2.0
 
-k1: 5.0
-k2: 2.0
+        frequency: 7.0
+        lookAhead: 3
 
-frequency: 5.0
-lookAhead: 3
-
-x: 0.0
-y: 0.0
-theta: 0.0
+        # false -> Pose Input Mode
+        # true -> Velocity Input Mode
+        mode: True
