--- a/ros2_interface/package.xml
+++ b/ros2_interface/package.xml
@@ -1,9 +1,8 @@
 <?xml version="1.0"?>
-<?xml-model href="http://download.ros.org/schema/package_format3.xsd" 
-						schematypens="http://www.w3.org/2001/XMLSchema"?>
+<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
 <package format="3">
 
-  <name>kobuki_control</name>
+  <name>ros2_interface</name>
   <version>0.0.1</version>
   
   <description>kobuki control through ROS2</description>
@@ -21,4 +20,3 @@
   </export>
 
 </package>
-
