--- a/turtlebot_description/CMakeLists.txt
+++ b/turtlebot_description/CMakeLists.txt
@@ -21,9 +21,12 @@ find_package(urdf REQUIRED)
 ################################################################################
 # Install
 ################################################################################
-install(DIRECTORY meshes launch urdf
+install(DIRECTORY meshes launch urdf worlds
   DESTINATION share/${PROJECT_NAME}
 )
+
+ament_environment_hooks("${CMAKE_CURRENT_SOURCE_DIR}/env-hooks/${PROJECT_NAME}.sh.in")
+ament_environment_hooks("${CMAKE_CURRENT_SOURCE_DIR}/env-hooks/${PROJECT_NAME}.dsv.in")
 
 ################################################################################
 # Macro for ament package
