--- a/turtlebot_interface/package.xml
+++ b/turtlebot_interface/package.xml
@@ -2,7 +2,7 @@
 <?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
 <package format="3">
 
-  <name>ros2_interface</name>
+  <name>turtlebot_interface</name>
   <version>0.0.1</version>
   
   <description>kobuki control through ROS2</description>
